falta autenticar login

--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -22,8 +22,8 @@
             </div>
 
             <app-custom-input 
-            icon="mail-outline" 
-            label="email"
+            icon="lock-closed-outline" 
+            label="password"
             type="password"
             autocomplete=""
             [control]="form.controls.password"
@@ -42,7 +42,7 @@
             </ion-button>
 
             <ion-button class="ion-margin-top" routerLink="register" routerLinkActive="router-link-active"  expand="block" mode="ios" fill="outline">
-                Ingresar
+                Registrate
                 <ion-icon slot="end" name="person-add-outline"></ion-icon>
             </ion-button>
 
