--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -1,13 +1,59 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Register" backButton="/auth"></app-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+    <div class="d-flex-center">
+
+        <form [formGroup]="form" class="auth-form" (ngSubmit)="submit()" (keypress.enter)="submit()">
+            
+            <app-logo></app-logo>
+
+            <app-custom-input 
+            icon="person-outline" 
+            label="nombre" 
+            type="text" 
+            autocomplete=""
+            [control]="form.controls.name"
+            ></app-custom-input>
+            
+            <div class="validators" *ngIf="form.controls.name.errors && form.controls.name.touched">
+                <div *ngIf="form.controls.name.errors?.['required']"> nobmre requerido</div>
+                
+            </div>
+
+            <app-custom-input 
+            icon="mail-outline" 
+            label="correo" 
+            type="email" 
+            autocomplete=""
+            [control]="form.controls.email"
+            ></app-custom-input>
+            
+            <div class="validators" *ngIf="form.controls.email.errors && form.controls.email.touched">
+                <div *ngIf="form.controls.email.errors?.['required']"> email requerido</div>
+                <div *ngIf="form.controls.email.errors?.['email']"> email invalido</div>
+            </div>
+
+            <app-custom-input 
+            icon="lock-closed-outline" 
+            label="password"
+            type="password"
+            autocomplete=""
+            [control]="form.controls.password"
+            ></app-custom-input>
+    
+            <div class="validators" *ngIf="form.controls.password.errors && form.controls.password.touched">
+                <div *ngIf="form.controls.password.errors?.['required']"> password requerido</div>
+                <div *ngIf="form.controls.password.errors?.['minlength']"> deve tener al menos 5 caracteres</div> 
+            </div>
+
+            <ion-button  expand="block" mode="ios" type="submit" class="submit" [disabled]="form.invalid">
+                Registro
+                <ion-icon slot="end" name="person-add-outline"></ion-icon>
+            </ion-button>
+
+            
+
+        </form>
+    </div>
 </ion-content>
