--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,14 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
+
+    <ion-buttons slot="start">
+      <ion-back-button *ngIf="backButton" [defaultHref]="backButton"></ion-back-button>
+    </ion-buttons>
+
     <ion-title>
       <strong>{{titulo}}</strong>
       <div class="admin">R E M O N</div>
     </ion-title>
+
   </ion-toolbar>
 </ion-header>
