falta autenticar login

--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -15,6 +15,6 @@
    ></ion-input>
 
    <ion-button *ngIf="isPassword" (click)="mostrarPassword()" slot="end" fill="clear" shape="round">
-    <ion-icon slot="icon-only" [name]="hide?'eye-outline':'eye-off-outline'"></ion-icon>
+    <ion-icon slot="icon-only" [name]="hide?'eye-off-outline':'eye-outline'"></ion-icon>
    </ion-button>
 </ion-item>
