--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -48,4 +48,18 @@
 
         </form>
     </div>
+    <div class="d-flex-center">
+        <p >botones de acceso rapido</p>
+    </div>
+    <div class="d-flex-center">
+        <ion-button (click)="acceso1()" class="boton-custom">
+            usuario 1
+          </ion-button>
+        <ion-button (click)="acceso2()" class="boton-custom">
+            usuario 2
+          </ion-button>
+        <ion-button (click)="acceso3()" class="boton-custom">
+            usuario 3
+          </ion-button>
+    </div>
 </ion-content>
