--- a/src/app/pages/auth/forgot-password/forgot-password.page.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.page.html
@@ -1,13 +1,33 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>forgot-password</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="recuperar cuenta" backButton="/auth"></app-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">forgot-password</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+    <div class="d-flex-center">
+
+        <form [formGroup]="form" class="auth-form" (ngSubmit)="submit()" (keypress.enter)="submit()">
+            
+            <app-logo></app-logo>
+
+            <p class="ion-text-center">Le enviaremos un email para restablecer la contraseña de su cuenta</p>
+
+            <app-custom-input 
+            icon="mail-outline" 
+            label="correo" 
+            type="email" 
+            autocomplete=""
+            [control]="form.controls.email"
+            ></app-custom-input>
+            
+            <div class="validators" *ngIf="form.controls.email.errors && form.controls.email.touched">
+                <div *ngIf="form.controls.email.errors?.['required']"> email requerido</div>
+                <div *ngIf="form.controls.email.errors?.['email']"> email invalido</div>
+            </div>
+
+            <ion-button  expand="block" mode="ios" type="submit" class="submit" [disabled]="form.invalid">
+                  Recuperar contraseña
+                <ion-icon slot="end" name="arrow-forward"></ion-icon>
+            </ion-button>
+
+        </form>
+    </div>
 </ion-content>
