--- a/src/app/shared/components/logo/logo.component.scss
+++ b/src/app/shared/components/logo/logo.component.scss
@@ -1,6 +1,10 @@
 .icon{
     font-size: 80px;
     margin-top: 0px;
+    width: 180px;
+    height: auto;
+    display: block; /* Asegura que la imagen sea un elemento de bloque */
+  margin: auto; 
 }
 h1{
     margin-top: 0;
