--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -1,4 +1,5 @@
-<ion-icon class="icon" color="primary" name="globe-outline"></ion-icon>
+
+<ion-img src="assets/logo.png" class="icon" color="primary" name="globe-outline"></ion-img>
 
 <ion-text color="primary">
   <h1><strong>Remon</strong>app</h1>
